parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    FINALLY

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> io_stmt
Rule 4     statement -> exception_stmt
Rule 5     statement -> udtype_stmt
Rule 6     statement -> storage_stmt
Rule 7     statement -> loop_stmt
Rule 8     statement_list -> statement_list statement
Rule 9     statement_list -> statement
Rule 10    io_stmt -> COUT LSHIFT cout_list SEMICOLON
Rule 11    cout_list -> cout_list LSHIFT cout_item
Rule 12    cout_list -> cout_item
Rule 13    cout_item -> STRING
Rule 14    cout_item -> ID
Rule 15    io_stmt -> CIN RSHIFT id_list SEMICOLON
Rule 16    id_list -> id_list RSHIFT ID
Rule 17    id_list -> ID
Rule 18    io_stmt -> IFSTREAM ID SEMICOLON
Rule 19    io_stmt -> OFSTREAM ID SEMICOLON
Rule 20    exception_stmt -> TRY LBRACE statement_list RBRACE CATCH LPAREN ID RPAREN LBRACE statement_list RBRACE
Rule 21    exception_stmt -> THROW ID SEMICOLON
Rule 22    udtype_stmt -> utype
Rule 23    utype -> STRUCT ID LBRACE RBRACE SEMICOLON
Rule 24    utype -> CLASS ID LBRACE RBRACE SEMICOLON
Rule 25    utype -> UNION ID LBRACE RBRACE SEMICOLON
Rule 26    utype -> ENUM ID LBRACE ID RBRACE SEMICOLON
Rule 27    storage_stmt -> STATIC ID SEMICOLON
Rule 28    storage_stmt -> EXTERN ID SEMICOLON
Rule 29    storage_stmt -> REGISTER ID SEMICOLON
Rule 30    storage_stmt -> AUTO ID SEMICOLON
Rule 31    loop_stmt -> FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN
Rule 32    loop_stmt -> FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN LBRACE statement_list RBRACE
Rule 33    loop_stmt -> WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
Rule 34    loop_stmt -> DO LBRACE statement_list RBRACE WHILE LPAREN condition RPAREN SEMICOLON
Rule 35    simple_stmt -> ID ASSIGN NUMBER
Rule 36    simple_stmt -> INT ID ASSIGN NUMBER
Rule 37    simple_stmt -> ID PLUSPLUS
Rule 38    simple_stmt -> ID
Rule 39    condition -> ID LT NUMBER
Rule 40    condition -> ID GT NUMBER
Rule 41    condition -> ID

Terminals, with rules where they appear

ASSIGN               : 35 36
AUTO                 : 30
CATCH                : 20
CIN                  : 15
CLASS                : 24
COMMA                : 
COUT                 : 10
DO                   : 34
ENUM                 : 26
EXTERN               : 28
FINALLY              : 
FOR                  : 31 32
GT                   : 40
ID                   : 14 16 17 18 19 20 21 23 24 25 26 26 27 28 29 30 35 36 37 38 39 40 41
IFSTREAM             : 18
INT                  : 36
LBRACE               : 20 20 23 24 25 26 32 33 34
LPAREN               : 20 31 32 33 34
LSHIFT               : 10 11
LT                   : 39
NUMBER               : 35 36 39 40
OFSTREAM             : 19
PLUSPLUS             : 37
RBRACE               : 20 20 23 24 25 26 32 33 34
REGISTER             : 29
RPAREN               : 20 31 32 33 34
RSHIFT               : 15 16
SEMICOLON            : 10 15 18 19 21 23 24 25 26 27 28 29 30 31 31 32 32 34
STATIC               : 27
STRING               : 13
STRUCT               : 23
THROW                : 21
TRY                  : 20
UNION                : 25
WHILE                : 33 34
error                : 

Nonterminals, with rules where they appear

condition            : 31 32 33 34
cout_item            : 11 12
cout_list            : 10 11
exception_stmt       : 4
id_list              : 15 16
io_stmt              : 3
loop_stmt            : 7
program              : 1 0
simple_stmt          : 31 31 32 32
statement            : 1 2 8 9
statement_list       : 8 20 20 32 33 34
storage_stmt         : 6
udtype_stmt          : 5
utype                : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . io_stmt
    (4) statement -> . exception_stmt
    (5) statement -> . udtype_stmt
    (6) statement -> . storage_stmt
    (7) statement -> . loop_stmt
    (10) io_stmt -> . COUT LSHIFT cout_list SEMICOLON
    (15) io_stmt -> . CIN RSHIFT id_list SEMICOLON
    (18) io_stmt -> . IFSTREAM ID SEMICOLON
    (19) io_stmt -> . OFSTREAM ID SEMICOLON
    (20) exception_stmt -> . TRY LBRACE statement_list RBRACE CATCH LPAREN ID RPAREN LBRACE statement_list RBRACE
    (21) exception_stmt -> . THROW ID SEMICOLON
    (22) udtype_stmt -> . utype
    (27) storage_stmt -> . STATIC ID SEMICOLON
    (28) storage_stmt -> . EXTERN ID SEMICOLON
    (29) storage_stmt -> . REGISTER ID SEMICOLON
    (30) storage_stmt -> . AUTO ID SEMICOLON
    (31) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN
    (32) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN LBRACE statement_list RBRACE
    (33) loop_stmt -> . WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
    (34) loop_stmt -> . DO LBRACE statement_list RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (23) utype -> . STRUCT ID LBRACE RBRACE SEMICOLON
    (24) utype -> . CLASS ID LBRACE RBRACE SEMICOLON
    (25) utype -> . UNION ID LBRACE RBRACE SEMICOLON
    (26) utype -> . ENUM ID LBRACE ID RBRACE SEMICOLON

    COUT            shift and go to state 8
    CIN             shift and go to state 9
    IFSTREAM        shift and go to state 10
    OFSTREAM        shift and go to state 11
    TRY             shift and go to state 12
    THROW           shift and go to state 13
    STATIC          shift and go to state 15
    EXTERN          shift and go to state 16
    REGISTER        shift and go to state 17
    AUTO            shift and go to state 18
    FOR             shift and go to state 19
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    STRUCT          shift and go to state 22
    CLASS           shift and go to state 23
    UNION           shift and go to state 24
    ENUM            shift and go to state 25

    program                        shift and go to state 1
    statement                      shift and go to state 2
    io_stmt                        shift and go to state 3
    exception_stmt                 shift and go to state 4
    udtype_stmt                    shift and go to state 5
    storage_stmt                   shift and go to state 6
    loop_stmt                      shift and go to state 7
    utype                          shift and go to state 14

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . io_stmt
    (4) statement -> . exception_stmt
    (5) statement -> . udtype_stmt
    (6) statement -> . storage_stmt
    (7) statement -> . loop_stmt
    (10) io_stmt -> . COUT LSHIFT cout_list SEMICOLON
    (15) io_stmt -> . CIN RSHIFT id_list SEMICOLON
    (18) io_stmt -> . IFSTREAM ID SEMICOLON
    (19) io_stmt -> . OFSTREAM ID SEMICOLON
    (20) exception_stmt -> . TRY LBRACE statement_list RBRACE CATCH LPAREN ID RPAREN LBRACE statement_list RBRACE
    (21) exception_stmt -> . THROW ID SEMICOLON
    (22) udtype_stmt -> . utype
    (27) storage_stmt -> . STATIC ID SEMICOLON
    (28) storage_stmt -> . EXTERN ID SEMICOLON
    (29) storage_stmt -> . REGISTER ID SEMICOLON
    (30) storage_stmt -> . AUTO ID SEMICOLON
    (31) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN
    (32) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN LBRACE statement_list RBRACE
    (33) loop_stmt -> . WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
    (34) loop_stmt -> . DO LBRACE statement_list RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (23) utype -> . STRUCT ID LBRACE RBRACE SEMICOLON
    (24) utype -> . CLASS ID LBRACE RBRACE SEMICOLON
    (25) utype -> . UNION ID LBRACE RBRACE SEMICOLON
    (26) utype -> . ENUM ID LBRACE ID RBRACE SEMICOLON

    COUT            shift and go to state 8
    CIN             shift and go to state 9
    IFSTREAM        shift and go to state 10
    OFSTREAM        shift and go to state 11
    TRY             shift and go to state 12
    THROW           shift and go to state 13
    STATIC          shift and go to state 15
    EXTERN          shift and go to state 16
    REGISTER        shift and go to state 17
    AUTO            shift and go to state 18
    FOR             shift and go to state 19
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    STRUCT          shift and go to state 22
    CLASS           shift and go to state 23
    UNION           shift and go to state 24
    ENUM            shift and go to state 25

    statement                      shift and go to state 26
    io_stmt                        shift and go to state 3
    exception_stmt                 shift and go to state 4
    udtype_stmt                    shift and go to state 5
    storage_stmt                   shift and go to state 6
    loop_stmt                      shift and go to state 7
    utype                          shift and go to state 14

state 2

    (2) program -> statement .

    COUT            reduce using rule 2 (program -> statement .)
    CIN             reduce using rule 2 (program -> statement .)
    IFSTREAM        reduce using rule 2 (program -> statement .)
    OFSTREAM        reduce using rule 2 (program -> statement .)
    TRY             reduce using rule 2 (program -> statement .)
    THROW           reduce using rule 2 (program -> statement .)
    STATIC          reduce using rule 2 (program -> statement .)
    EXTERN          reduce using rule 2 (program -> statement .)
    REGISTER        reduce using rule 2 (program -> statement .)
    AUTO            reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    DO              reduce using rule 2 (program -> statement .)
    STRUCT          reduce using rule 2 (program -> statement .)
    CLASS           reduce using rule 2 (program -> statement .)
    UNION           reduce using rule 2 (program -> statement .)
    ENUM            reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> io_stmt .

    COUT            reduce using rule 3 (statement -> io_stmt .)
    CIN             reduce using rule 3 (statement -> io_stmt .)
    IFSTREAM        reduce using rule 3 (statement -> io_stmt .)
    OFSTREAM        reduce using rule 3 (statement -> io_stmt .)
    TRY             reduce using rule 3 (statement -> io_stmt .)
    THROW           reduce using rule 3 (statement -> io_stmt .)
    STATIC          reduce using rule 3 (statement -> io_stmt .)
    EXTERN          reduce using rule 3 (statement -> io_stmt .)
    REGISTER        reduce using rule 3 (statement -> io_stmt .)
    AUTO            reduce using rule 3 (statement -> io_stmt .)
    FOR             reduce using rule 3 (statement -> io_stmt .)
    WHILE           reduce using rule 3 (statement -> io_stmt .)
    DO              reduce using rule 3 (statement -> io_stmt .)
    STRUCT          reduce using rule 3 (statement -> io_stmt .)
    CLASS           reduce using rule 3 (statement -> io_stmt .)
    UNION           reduce using rule 3 (statement -> io_stmt .)
    ENUM            reduce using rule 3 (statement -> io_stmt .)
    $end            reduce using rule 3 (statement -> io_stmt .)
    RBRACE          reduce using rule 3 (statement -> io_stmt .)


state 4

    (4) statement -> exception_stmt .

    COUT            reduce using rule 4 (statement -> exception_stmt .)
    CIN             reduce using rule 4 (statement -> exception_stmt .)
    IFSTREAM        reduce using rule 4 (statement -> exception_stmt .)
    OFSTREAM        reduce using rule 4 (statement -> exception_stmt .)
    TRY             reduce using rule 4 (statement -> exception_stmt .)
    THROW           reduce using rule 4 (statement -> exception_stmt .)
    STATIC          reduce using rule 4 (statement -> exception_stmt .)
    EXTERN          reduce using rule 4 (statement -> exception_stmt .)
    REGISTER        reduce using rule 4 (statement -> exception_stmt .)
    AUTO            reduce using rule 4 (statement -> exception_stmt .)
    FOR             reduce using rule 4 (statement -> exception_stmt .)
    WHILE           reduce using rule 4 (statement -> exception_stmt .)
    DO              reduce using rule 4 (statement -> exception_stmt .)
    STRUCT          reduce using rule 4 (statement -> exception_stmt .)
    CLASS           reduce using rule 4 (statement -> exception_stmt .)
    UNION           reduce using rule 4 (statement -> exception_stmt .)
    ENUM            reduce using rule 4 (statement -> exception_stmt .)
    $end            reduce using rule 4 (statement -> exception_stmt .)
    RBRACE          reduce using rule 4 (statement -> exception_stmt .)


state 5

    (5) statement -> udtype_stmt .

    COUT            reduce using rule 5 (statement -> udtype_stmt .)
    CIN             reduce using rule 5 (statement -> udtype_stmt .)
    IFSTREAM        reduce using rule 5 (statement -> udtype_stmt .)
    OFSTREAM        reduce using rule 5 (statement -> udtype_stmt .)
    TRY             reduce using rule 5 (statement -> udtype_stmt .)
    THROW           reduce using rule 5 (statement -> udtype_stmt .)
    STATIC          reduce using rule 5 (statement -> udtype_stmt .)
    EXTERN          reduce using rule 5 (statement -> udtype_stmt .)
    REGISTER        reduce using rule 5 (statement -> udtype_stmt .)
    AUTO            reduce using rule 5 (statement -> udtype_stmt .)
    FOR             reduce using rule 5 (statement -> udtype_stmt .)
    WHILE           reduce using rule 5 (statement -> udtype_stmt .)
    DO              reduce using rule 5 (statement -> udtype_stmt .)
    STRUCT          reduce using rule 5 (statement -> udtype_stmt .)
    CLASS           reduce using rule 5 (statement -> udtype_stmt .)
    UNION           reduce using rule 5 (statement -> udtype_stmt .)
    ENUM            reduce using rule 5 (statement -> udtype_stmt .)
    $end            reduce using rule 5 (statement -> udtype_stmt .)
    RBRACE          reduce using rule 5 (statement -> udtype_stmt .)


state 6

    (6) statement -> storage_stmt .

    COUT            reduce using rule 6 (statement -> storage_stmt .)
    CIN             reduce using rule 6 (statement -> storage_stmt .)
    IFSTREAM        reduce using rule 6 (statement -> storage_stmt .)
    OFSTREAM        reduce using rule 6 (statement -> storage_stmt .)
    TRY             reduce using rule 6 (statement -> storage_stmt .)
    THROW           reduce using rule 6 (statement -> storage_stmt .)
    STATIC          reduce using rule 6 (statement -> storage_stmt .)
    EXTERN          reduce using rule 6 (statement -> storage_stmt .)
    REGISTER        reduce using rule 6 (statement -> storage_stmt .)
    AUTO            reduce using rule 6 (statement -> storage_stmt .)
    FOR             reduce using rule 6 (statement -> storage_stmt .)
    WHILE           reduce using rule 6 (statement -> storage_stmt .)
    DO              reduce using rule 6 (statement -> storage_stmt .)
    STRUCT          reduce using rule 6 (statement -> storage_stmt .)
    CLASS           reduce using rule 6 (statement -> storage_stmt .)
    UNION           reduce using rule 6 (statement -> storage_stmt .)
    ENUM            reduce using rule 6 (statement -> storage_stmt .)
    $end            reduce using rule 6 (statement -> storage_stmt .)
    RBRACE          reduce using rule 6 (statement -> storage_stmt .)


state 7

    (7) statement -> loop_stmt .

    COUT            reduce using rule 7 (statement -> loop_stmt .)
    CIN             reduce using rule 7 (statement -> loop_stmt .)
    IFSTREAM        reduce using rule 7 (statement -> loop_stmt .)
    OFSTREAM        reduce using rule 7 (statement -> loop_stmt .)
    TRY             reduce using rule 7 (statement -> loop_stmt .)
    THROW           reduce using rule 7 (statement -> loop_stmt .)
    STATIC          reduce using rule 7 (statement -> loop_stmt .)
    EXTERN          reduce using rule 7 (statement -> loop_stmt .)
    REGISTER        reduce using rule 7 (statement -> loop_stmt .)
    AUTO            reduce using rule 7 (statement -> loop_stmt .)
    FOR             reduce using rule 7 (statement -> loop_stmt .)
    WHILE           reduce using rule 7 (statement -> loop_stmt .)
    DO              reduce using rule 7 (statement -> loop_stmt .)
    STRUCT          reduce using rule 7 (statement -> loop_stmt .)
    CLASS           reduce using rule 7 (statement -> loop_stmt .)
    UNION           reduce using rule 7 (statement -> loop_stmt .)
    ENUM            reduce using rule 7 (statement -> loop_stmt .)
    $end            reduce using rule 7 (statement -> loop_stmt .)
    RBRACE          reduce using rule 7 (statement -> loop_stmt .)


state 8

    (10) io_stmt -> COUT . LSHIFT cout_list SEMICOLON

    LSHIFT          shift and go to state 27


state 9

    (15) io_stmt -> CIN . RSHIFT id_list SEMICOLON

    RSHIFT          shift and go to state 28


state 10

    (18) io_stmt -> IFSTREAM . ID SEMICOLON

    ID              shift and go to state 29


state 11

    (19) io_stmt -> OFSTREAM . ID SEMICOLON

    ID              shift and go to state 30


state 12

    (20) exception_stmt -> TRY . LBRACE statement_list RBRACE CATCH LPAREN ID RPAREN LBRACE statement_list RBRACE

    LBRACE          shift and go to state 31


state 13

    (21) exception_stmt -> THROW . ID SEMICOLON

    ID              shift and go to state 32


state 14

    (22) udtype_stmt -> utype .

    COUT            reduce using rule 22 (udtype_stmt -> utype .)
    CIN             reduce using rule 22 (udtype_stmt -> utype .)
    IFSTREAM        reduce using rule 22 (udtype_stmt -> utype .)
    OFSTREAM        reduce using rule 22 (udtype_stmt -> utype .)
    TRY             reduce using rule 22 (udtype_stmt -> utype .)
    THROW           reduce using rule 22 (udtype_stmt -> utype .)
    STATIC          reduce using rule 22 (udtype_stmt -> utype .)
    EXTERN          reduce using rule 22 (udtype_stmt -> utype .)
    REGISTER        reduce using rule 22 (udtype_stmt -> utype .)
    AUTO            reduce using rule 22 (udtype_stmt -> utype .)
    FOR             reduce using rule 22 (udtype_stmt -> utype .)
    WHILE           reduce using rule 22 (udtype_stmt -> utype .)
    DO              reduce using rule 22 (udtype_stmt -> utype .)
    STRUCT          reduce using rule 22 (udtype_stmt -> utype .)
    CLASS           reduce using rule 22 (udtype_stmt -> utype .)
    UNION           reduce using rule 22 (udtype_stmt -> utype .)
    ENUM            reduce using rule 22 (udtype_stmt -> utype .)
    $end            reduce using rule 22 (udtype_stmt -> utype .)
    RBRACE          reduce using rule 22 (udtype_stmt -> utype .)


state 15

    (27) storage_stmt -> STATIC . ID SEMICOLON

    ID              shift and go to state 33


state 16

    (28) storage_stmt -> EXTERN . ID SEMICOLON

    ID              shift and go to state 34


state 17

    (29) storage_stmt -> REGISTER . ID SEMICOLON

    ID              shift and go to state 35


state 18

    (30) storage_stmt -> AUTO . ID SEMICOLON

    ID              shift and go to state 36


state 19

    (31) loop_stmt -> FOR . LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN
    (32) loop_stmt -> FOR . LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 37


state 20

    (33) loop_stmt -> WHILE . LPAREN condition RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 38


state 21

    (34) loop_stmt -> DO . LBRACE statement_list RBRACE WHILE LPAREN condition RPAREN SEMICOLON

    LBRACE          shift and go to state 39


state 22

    (23) utype -> STRUCT . ID LBRACE RBRACE SEMICOLON

    ID              shift and go to state 40


state 23

    (24) utype -> CLASS . ID LBRACE RBRACE SEMICOLON

    ID              shift and go to state 41


state 24

    (25) utype -> UNION . ID LBRACE RBRACE SEMICOLON

    ID              shift and go to state 42


state 25

    (26) utype -> ENUM . ID LBRACE ID RBRACE SEMICOLON

    ID              shift and go to state 43


state 26

    (1) program -> program statement .

    COUT            reduce using rule 1 (program -> program statement .)
    CIN             reduce using rule 1 (program -> program statement .)
    IFSTREAM        reduce using rule 1 (program -> program statement .)
    OFSTREAM        reduce using rule 1 (program -> program statement .)
    TRY             reduce using rule 1 (program -> program statement .)
    THROW           reduce using rule 1 (program -> program statement .)
    STATIC          reduce using rule 1 (program -> program statement .)
    EXTERN          reduce using rule 1 (program -> program statement .)
    REGISTER        reduce using rule 1 (program -> program statement .)
    AUTO            reduce using rule 1 (program -> program statement .)
    FOR             reduce using rule 1 (program -> program statement .)
    WHILE           reduce using rule 1 (program -> program statement .)
    DO              reduce using rule 1 (program -> program statement .)
    STRUCT          reduce using rule 1 (program -> program statement .)
    CLASS           reduce using rule 1 (program -> program statement .)
    UNION           reduce using rule 1 (program -> program statement .)
    ENUM            reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 27

    (10) io_stmt -> COUT LSHIFT . cout_list SEMICOLON
    (11) cout_list -> . cout_list LSHIFT cout_item
    (12) cout_list -> . cout_item
    (13) cout_item -> . STRING
    (14) cout_item -> . ID

    STRING          shift and go to state 46
    ID              shift and go to state 47

    cout_list                      shift and go to state 44
    cout_item                      shift and go to state 45

state 28

    (15) io_stmt -> CIN RSHIFT . id_list SEMICOLON
    (16) id_list -> . id_list RSHIFT ID
    (17) id_list -> . ID

    ID              shift and go to state 49

    id_list                        shift and go to state 48

state 29

    (18) io_stmt -> IFSTREAM ID . SEMICOLON

    SEMICOLON       shift and go to state 50


state 30

    (19) io_stmt -> OFSTREAM ID . SEMICOLON

    SEMICOLON       shift and go to state 51


state 31

    (20) exception_stmt -> TRY LBRACE . statement_list RBRACE CATCH LPAREN ID RPAREN LBRACE statement_list RBRACE
    (8) statement_list -> . statement_list statement
    (9) statement_list -> . statement
    (3) statement -> . io_stmt
    (4) statement -> . exception_stmt
    (5) statement -> . udtype_stmt
    (6) statement -> . storage_stmt
    (7) statement -> . loop_stmt
    (10) io_stmt -> . COUT LSHIFT cout_list SEMICOLON
    (15) io_stmt -> . CIN RSHIFT id_list SEMICOLON
    (18) io_stmt -> . IFSTREAM ID SEMICOLON
    (19) io_stmt -> . OFSTREAM ID SEMICOLON
    (20) exception_stmt -> . TRY LBRACE statement_list RBRACE CATCH LPAREN ID RPAREN LBRACE statement_list RBRACE
    (21) exception_stmt -> . THROW ID SEMICOLON
    (22) udtype_stmt -> . utype
    (27) storage_stmt -> . STATIC ID SEMICOLON
    (28) storage_stmt -> . EXTERN ID SEMICOLON
    (29) storage_stmt -> . REGISTER ID SEMICOLON
    (30) storage_stmt -> . AUTO ID SEMICOLON
    (31) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN
    (32) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN LBRACE statement_list RBRACE
    (33) loop_stmt -> . WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
    (34) loop_stmt -> . DO LBRACE statement_list RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (23) utype -> . STRUCT ID LBRACE RBRACE SEMICOLON
    (24) utype -> . CLASS ID LBRACE RBRACE SEMICOLON
    (25) utype -> . UNION ID LBRACE RBRACE SEMICOLON
    (26) utype -> . ENUM ID LBRACE ID RBRACE SEMICOLON

    COUT            shift and go to state 8
    CIN             shift and go to state 9
    IFSTREAM        shift and go to state 10
    OFSTREAM        shift and go to state 11
    TRY             shift and go to state 12
    THROW           shift and go to state 13
    STATIC          shift and go to state 15
    EXTERN          shift and go to state 16
    REGISTER        shift and go to state 17
    AUTO            shift and go to state 18
    FOR             shift and go to state 19
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    STRUCT          shift and go to state 22
    CLASS           shift and go to state 23
    UNION           shift and go to state 24
    ENUM            shift and go to state 25

    statement_list                 shift and go to state 52
    statement                      shift and go to state 53
    io_stmt                        shift and go to state 3
    exception_stmt                 shift and go to state 4
    udtype_stmt                    shift and go to state 5
    storage_stmt                   shift and go to state 6
    loop_stmt                      shift and go to state 7
    utype                          shift and go to state 14

state 32

    (21) exception_stmt -> THROW ID . SEMICOLON

    SEMICOLON       shift and go to state 54


state 33

    (27) storage_stmt -> STATIC ID . SEMICOLON

    SEMICOLON       shift and go to state 55


state 34

    (28) storage_stmt -> EXTERN ID . SEMICOLON

    SEMICOLON       shift and go to state 56


state 35

    (29) storage_stmt -> REGISTER ID . SEMICOLON

    SEMICOLON       shift and go to state 57


state 36

    (30) storage_stmt -> AUTO ID . SEMICOLON

    SEMICOLON       shift and go to state 58


state 37

    (31) loop_stmt -> FOR LPAREN . simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN
    (32) loop_stmt -> FOR LPAREN . simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN LBRACE statement_list RBRACE
    (35) simple_stmt -> . ID ASSIGN NUMBER
    (36) simple_stmt -> . INT ID ASSIGN NUMBER
    (37) simple_stmt -> . ID PLUSPLUS
    (38) simple_stmt -> . ID

    ID              shift and go to state 60
    INT             shift and go to state 61

    simple_stmt                    shift and go to state 59

state 38

    (33) loop_stmt -> WHILE LPAREN . condition RPAREN LBRACE statement_list RBRACE
    (39) condition -> . ID LT NUMBER
    (40) condition -> . ID GT NUMBER
    (41) condition -> . ID

    ID              shift and go to state 63

    condition                      shift and go to state 62

state 39

    (34) loop_stmt -> DO LBRACE . statement_list RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (8) statement_list -> . statement_list statement
    (9) statement_list -> . statement
    (3) statement -> . io_stmt
    (4) statement -> . exception_stmt
    (5) statement -> . udtype_stmt
    (6) statement -> . storage_stmt
    (7) statement -> . loop_stmt
    (10) io_stmt -> . COUT LSHIFT cout_list SEMICOLON
    (15) io_stmt -> . CIN RSHIFT id_list SEMICOLON
    (18) io_stmt -> . IFSTREAM ID SEMICOLON
    (19) io_stmt -> . OFSTREAM ID SEMICOLON
    (20) exception_stmt -> . TRY LBRACE statement_list RBRACE CATCH LPAREN ID RPAREN LBRACE statement_list RBRACE
    (21) exception_stmt -> . THROW ID SEMICOLON
    (22) udtype_stmt -> . utype
    (27) storage_stmt -> . STATIC ID SEMICOLON
    (28) storage_stmt -> . EXTERN ID SEMICOLON
    (29) storage_stmt -> . REGISTER ID SEMICOLON
    (30) storage_stmt -> . AUTO ID SEMICOLON
    (31) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN
    (32) loop_stmt -> . FOR LPAREN simple_stmt SEMICOLON condition SEMICOLON simple_stmt RPAREN LBRACE statement_list RBRACE
    (33) loop_stmt -> . WHILE LPAREN condition RPAREN LBRACE statement_list RBRACE
    (34) loop_stmt -> . DO LBRACE statement_list RBRACE WHILE LPAREN condition RPAREN SEMICOLON
    (23) utype -> . STRUCT ID LBRACE RBRACE SEMICOLON
    (24) utype -> . CLASS ID LBRACE RBRACE SEMICOLON
    (25) utype -> . UNION ID LBRACE RBRACE SEMICOLON
    (26) utype -> . ENUM ID LBRACE ID RBRACE SEMICOLON

    COUT            shift and go to state 8
    CIN             shift and go to state 9
    IFSTREAM        shift and go to state 10
    OFSTREAM        shift and go to state 11
    TRY             shift and go to state 12
    THROW           shift and go to state 13
    STATIC          shift and go to state 15
    EXTERN          shift and go to state 16
    REGISTER        shift and go to state 17
    AUTO            shift and go to state 18
    FOR             shift and go to state 19
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    STRUCT          shift and go to state 22
    CLASS           shift and go to state 23
    UNION           shift and go to state 24
    ENUM            shift and go to state 25

    statement_list                 shift and go to state 64
    statement                      shift and go to state 53
    io_stmt                        shift and go to state 3
    exception_stmt                 shift and go to state 4
    udtype_stmt                    shift and go to state 5
    storage_stmt                   shift and go to state 6
    loop_stmt                      shift and go to state 7
    utype                          shift and go to state 14

state 40

    (23) utype -> STRUCT ID . LBRACE RBRACE SEMICOLON

    LBRACE          shift and go to state 65


state 41

    (24) utype -> CLASS ID . LBRACE RBRACE SEMICOLON

    LBRACE          shift and go to state 66


state 42

    (25) utype -> UNION ID . LBRACE RBRACE SEMICOLON

    LBRACE          shift and go to state 67


state 43

    (26) utype -> ENUM ID . LBRACE ID RBRACE SEMICOLON

    LBRACE          shift and go to state 68


state 44

    (10) io_stmt -> COUT LSHIFT cout_list . SEMICOLON
    (11) cout_list -> cout_list . LSHIFT cout_item

    SEMICOLON       shift and go to state 70
    LSHIFT          shift and go to state 69


state 45

    (12) cout_list -> cout_item .

    SEMICOLON       reduce using rule 12 (cout_list -> cout_item .)
    LSHIFT          reduce using rule 12 (cout_list -> cout_item .)


state 46

    (13) cout_item -> STRING .

    SEMICOLON       reduce using rule 13 (cout_item -> STRING .)
    LSHIFT          reduce using rule 13 (cout_item -> STRING .)


state 47

    (14) cout_item -> ID .

    SEMICOLON       reduce using rule 14 (cout_item -> ID .)
    LSHIFT          reduce using rule 14 (cout_item -> ID .)


state 48

    (15) io_stmt -> CIN RSHIFT id_list . SEMICOLON
    (16) id_list -> id_list . RSHIFT ID

    SEMICOLON       shift and go to state 72
    RSHIFT          shift and go to state 71


state 49

    (17) id_list -> ID .

    SEMICOLON       reduce using rule 17 (id_list -> ID .)
    RSHIFT          reduce using rule 17 (id_list -> ID .)


state 50

    (18) io_stmt -> IFSTREAM ID SEMICOLON .
